--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
     <title>Face Detection</title>
 </head>
 <body>
     <h1>Welcome to Face Detection site.</h1>
+
+    
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8  offset-lg-2">
+                <h3 class="mt-5">Live Streaming from computer</h3>
+                <img src="{{ url_for('video_feed') }}" width="75%">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
