--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
-    <title>Face Detection</title>
+    <title>{% block title %}{% endblock %}</title>
 </head>
-<body>
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Home Security</a>
@@ -19,6 +19,12 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{{ url_for('breach') }}">Directory</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{{ url_for('login') }}">Login</a>
+              </li>
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -28,14 +34,11 @@
         </div>
       </nav>
 
+      {% block content %}
+      {% if msg %}
+      <h3 class="text-center">{{ msg }}</h3>
+      {% endif %}
+      {% endblock %}
     
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8  offset-lg-2">
-                <h3 class="mt-5">Live Security Footage</h3>
-                <img src="{{ url_for('video_feed') }}" width="75%">
-            </div>
-        </div>
-    </div>
 </body>
 </html>
