--- a/templates/index.html
+++ b/templates/index.html
@@ -10,21 +10,27 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Home Security</a>
+          <a class="navbar-brand" href="/">Home Security</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="{{ url_for('index') }}">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{{ url_for('breach') }}">Directory</a>
+                <a class="nav-link active" aria-current="page" href="{{ url_for('imagedir') }}">Add Person</a>
               </li>
+              {% if not session['username'] %}
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{{ url_for('login') }}">Login</a>
+                <a class="nav-link active" aria-current="page" href="/">Login</a>
               </li>
+              {% else %}
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="{{ url_for('logout') }}">Logout</a>
+              </li>
+              {% endif %}
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
